--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-python_paths = pep_parse/ ./
+pythonpath = pep_parse .
 norecursedirs = env/*
 addopts = -vv -p no:cacheprovider --disable-warnings
 log_level=ERROR
