--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,47 @@
-attrs==21.4.0
-Automat==20.2.0
-cffi==1.15.0
-constantly==15.1.0
-cryptography==36.0.2
-cssselect==1.1.0
-flake8==4.0.1
-h2==3.2.0
-hpack==3.0.0
-hyperframe==5.2.0
+attrs==23.2.0
+Automat==22.10.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+constantly==23.10.4
+cryptography==42.0.5
+cssselect==1.2.0
+filelock==3.14.0
+flake8==7.0.0
+flake8-isort==6.1.1
 hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.2.0
-incremental==21.3.0
-iniconfig==1.1.1
-itemadapter==0.4.0
-itemloaders==1.0.4
-jmespath==1.0.0
-lxml==4.8.0
-mccabe==0.6.1
-packaging==21.3
-parsel==1.6.0
-pluggy==1.0.0
-priority==1.3.0
-Protego==0.2.1
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
-pycparser==2.21
-PyDispatcher==2.0.5
-pyflakes==2.4.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.7
-pytest==6.2.5
-pytest-pythonpath==0.7.4
+idna==3.7
+incremental==22.10.0
+iniconfig==2.0.0
+isort==5.13.2
+itemadapter==0.8.0
+itemloaders==1.2.0
+jmespath==1.0.1
+lxml==5.2.1
+mccabe==0.7.0
+packaging==24.0
+parsel==1.9.1
+pluggy==1.5.0
+Protego==0.3.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycodestyle==2.11.1
+pycparser==2.22
+PyDispatcher==2.0.7
+pyflakes==3.2.0
+pyOpenSSL==24.1.0
+pytest==8.2.0
 queuelib==1.6.2
-Scrapy==2.5.1
-service-identity==21.1.0
+requests==2.31.0
+requests-file==2.0.0
+ruff==0.4.2
+Scrapy==2.11.1
+service-identity==24.1.0
 six==1.16.0
-toml==0.10.2
+tldextract==5.1.2
 tqdm==4.66.2
-Twisted==22.2.0
-typing_extensions==4.1.1
-w3lib==1.22.0
-zipp==3.7.0
-zope.interface==5.4.0
+Twisted==24.3.0
+typing_extensions==4.11.0
+urllib3==2.2.1
+w3lib==2.1.2
+zope.interface==6.3
